--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -20,8 +20,10 @@
 }
 #content h2::before {
   content: counter(subsection) ".";
-  position: absolute;
-  left: -1em;
+  display: inline-block;
+  min-width: 2.5em;           /* reserve space for up to 2-digit numbers */
+  margin-left: -2.5em;      /* pull into the left margin */
+  text-align: right;        /* align numbers to the right edge */
 }
 
 /* H3: "1.1 Sub-subtitle" */
@@ -33,8 +35,10 @@
 }
 #content h3::before {
   content: counter(subsection) "." counter(subsubsection);
-  position: absolute;
-  left: -1.75em;
+  display: inline-block;
+  min-width: 3em;           /* allow extra width (e.g. “10.12”) */
+  margin-left: -3.5em;
+  text-align: right;
 }
 
 /* H4: "1.1.1 Sub-sub-subtitle" */
@@ -46,8 +50,10 @@
 }
 #content h4::before {
   content: counter(subsection) "." counter(subsubsection) "." counter(subsubsubsection);
-  position: absolute;
-  left: -2.5em;
+  display: inline-block;
+  min-width: 4em;           /* wider again for deeper levels */
+  margin-left: -4.5em;
+  text-align: right;
 }
 
 /* H5: "1.1.1.1 Sub-sub-subtitle" */
@@ -58,9 +64,11 @@
   margin-left: 3.5em;
 }
 #content h5::before {
-  content: counter(subsection) "." counter(subsubsection) "." counter(subsubsubsection) "." counter(subsubsubsubsection);
-  position: absolute;
-  left: -3.5em;
+  content: counter(subsection) "." counter(subsubsection) "." counter(subsubsubsection) "." counter(subsubsubsection);
+  display: inline-block;
+  min-width: 5em;           /* wider again for deeper levels */
+  margin-left: -5.5em;
+  text-align: right;
 }
 
 /* ── Number the “On this page” TOC on the right sidebar ── */
@@ -81,8 +89,11 @@
 
 #right-sidebar ul > li::before {
   content: counter(localtoc1) ". ";
-  position: absolute;
-  left: -1em;
+  display: inline-block;
+  min-width: 2em;
+  margin-left: -2em;
+  text-align: right;
+  vertical-align: baseline;
 }
 
 /* 3) If there are nested sub‐sections, number them “1.1”, “1.2”, etc. */
@@ -100,8 +111,11 @@
 
 #right-sidebar ul ul > li::before {
   content: counter(localtoc1) "." counter(localtoc2) " ";
-  position: absolute;
-  left: -1.75em;
+  display: inline-block;
+  min-width: 3em;
+  margin-left: -3em;
+  text-align: right;
+  vertical-align: baseline;
 }
 
 /* 4) For a third level (if you happen to have <ul><ul><ul>…), do the same: */
@@ -122,8 +136,11 @@
     counter(localtoc1) "."
     counter(localtoc2) "."
     counter(localtoc3) " ";
-  position: absolute;
-  left: -2.5em;
+  display: inline-block;
+  min-width: 4em;
+  margin-left: -4em;
+  text-align: right;
+  vertical-align: baseline;
 }
 
 /* 5) For a fourth level, do the same: */
@@ -143,10 +160,13 @@
   content:
     counter(localtoc1) "."
     counter(localtoc2) "."
-    counter(localtoc3) "."
+    counter(localtoc3) " "
     counter(localtoc4) " ";
-  position: absolute;
-  left: -3.5em;
+  display: inline-block;
+  min-width: 5em;
+  margin-left: -5em;
+  text-align: right;
+  vertical-align: baseline;
 }
 
 /* ── Update cell styles for myst-nb ── */
